--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.3",
+    "emailjs-com": "^3.2.0",
+    "formik": "^2.4.5",
     "framer-motion": "^11.0.21",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
