--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "framer-motion": "^11.0.21",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-spring": "^9.7.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
