--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
-    "react-spring": "^9.7.3"
+    "react-slick": "^0.30.2",
+    "react-spring": "^9.7.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
