--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-gtm": "^0.0.2",
     "react-gtm-module": "^2.0.11",
+    "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.3",
     "slick-carousel": "^1.8.1"
